--- a/LDAP-Auth.csproj
+++ b/LDAP-Auth.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Jellyfin.Plugin.LDAP_Auth</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Config\configPage.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Config\configPage.html" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Jellyfin.Controller" Version="10.2.*" />
     <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="2.3.8" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <None Remove="Configuration\configPage.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Configuration\configPage.html" />
   </ItemGroup>
 </Project>
