Ignore obj/bin dirs

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 ################################################################################
 
 /.vs/LDAP-Auth/v15/Server/sqlite3
-/obj
+*/obj
+*/bin
 /LDAP-Auth.sln.DotSettings.user
 /bin/Debug/netstandard2.0
 /.vs/LDAP-Auth/v15
