--- a/LDAP-Auth/LDAP-Auth.csproj
+++ b/LDAP-Auth/LDAP-Auth.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Jellyfin.Plugin.LDAP_Auth</RootNamespace>
-    <AssemblyVersion>7.0.0</AssemblyVersion>
-    <FileVersion>7.0.0</FileVersion>
+    <AssemblyVersion>7.0.0.0</AssemblyVersion>
+    <FileVersion>7.0.0.0</FileVersion>
   </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Config\configPage.html" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Config\configPage.html" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jellyfin.Controller" Version="10.5-*" />
+    <PackageReference Include="Jellyfin.Controller" Version="10.*" />
     <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.0.3" />
   </ItemGroup>
+
 </Project>
