--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
 # Configuration for Release Drafter: https://github.com/toolmantim/release-drafter
-name-template: LDAP-Auth Plugin v$NEXT_MAJOR_VERSION
+name-template: Version $NEXT_MAJOR_VERSION
 # Uses a more common single-digit versioning in Jellyfin plugins. Can be replaced by semver: $MAJOR.$MINOR.$PATCH
 # https://github.com/release-drafter/release-drafter#next-version-variables
 tag-template: v$NEXT_MAJOR_VERSION
@@ -46,6 +46,6 @@ exclude-labels:
 
 template: |
   <!-- Optional: add a release summary here -->
-  Packaged Zip can be downloaded [here](https://repo.jellyfin.org/releases/plugin/ldap-authentication/).
+  [Plugin build can be downloaded here](https://repo.jellyfin.org/releases/plugin/ldap-authentication/ldap-authentication_$NEXT_MAJOR_VERSION.0.0.0.zip).
 
   $CHANGES
