--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,8 +3,14 @@ name: Run CodeQL
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '**/*.md'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '.github/**'
+      - '**/*.md'
   schedule:
     - cron: '24 2 * * 4'
 
