--- a/build.yaml
+++ b/build.yaml
@@ -1,7 +1,7 @@
 ---
 name: "LDAP Authentication"
 guid: "958aad66-3784-4d2a-b89a-a7b6fab6e25c"
-version: "10.0.0.0"
+version: "11.0.0.0"
 targetAbi: "10.7.0.0"
 framework: "net5.0"
 owner: "jellyfin"
@@ -15,4 +15,4 @@ artifacts:
 - "LDAP-Auth.dll"
 - "Novell.Directory.Ldap.NETStandard.dll"
 changelog: >
-  Update for 10.7 support
+  Fix case-sensitive username check
