--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,10 +16,9 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: daily
+      interval: weekly
       time: '00:00'
     open-pull-requests-limit: 10
     commit-message:
-      prefix: fix
-      prefix-development: chore
+      prefix: chore
       include: scope
