--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -10,5 +10,5 @@ jobs:
   call:
     uses: jellyfin/jellyfin-meta-plugins/.github/workflows/bump-version.yaml@master
     with:
-      csproj-name: Jellyfin.Plugin.LDAP-Auth
+      csproj-name: LDAP-Auth
       is-unstable: ${{ github.event.release.prerelease }}
